<resources>
    <string name="app_name">NefesleChat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Первое <b>•</b> Второе</string>
    <string name="nav_header_subtitle">User@gmail.ru</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_self">Избранное</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_chats">Чаты</string>
    <string name="menu_create_chat">Создать чат</string>
    <string name="menu_search">Поиск людей</string>
    <string name="menu_about">О программе</string>
    <string name="nefeslechat_android_v1">NefesleChat для Android v1</string>
    <string name="fio_template">Фамилия Имя Отчество</string>
    <string name="status_template">Статус</string>
    <string name="account_label">Аккаунт</string>
    <string name="phone_template">+7 999 999 99 99</string>
    <string name="mail_template"><u>pochta1999@pochta.ru</u></string>
    <string name="phone_label">Номер телефона</string>
    <string name="mail_label">Почта</string>
    <string name="settings_label">Настройки</string>
    <string name="show_notifications_label">Показывать уведомления</string>
    <string name="private_chats_label">Личных чатов</string>
    <string name="group_chats_label">Групповых чатов</string>
    <string name="theme_const_str">Тема приложения</string>
    <string name="dark_theme_label">Тёмная тема</string>
    <string name="user_settings_const_str">Пользовательские настройки</string>
    <string name="create_chat_text">Создать чат</string>
    <string name="hint_create_chat_text">Название группового чата</string>
    <string name="input_message_text_hint">Напишите сообщение</string>
    <string name="login_button_text">Войти в аккаунт</string>
    <string name="title_activity_login">Авторизация</string>
    <string name="prompt_email">Эл. почта</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти в аккаунт</string>
    <string name="action_sign_in_short">Вход</string>
    <string name="action_sign_up">Зарегистрироваться</string>
    <string name="prompt_replay_password">Повтор пароля</string>
    <string name="sign_in_button_transition_text">Войти</string>
    <string name="sign_up_button_transition_text">Регистрация</string>
    <string name="register_label_const"><b>Регистрация</b></string>
    <string name="login_label_const"><b>Авторизация</b></string>
    <string name="exit_button_text_const">Выйти</string>
    <string name="token_hint_str">Токен</string>
    <string name="item_notes_name">Заметки</string>
    <string name="item_raspisanie_name">Расписание</string>
    <string name="create_note_const_str">Создать заметку</string>
    <string name="lastname_str">Фамилия</string>
    <string name="template_role">Шаблон роли</string>
    <string name="const_role_text">Роль пользователя</string>
    <string name="fio"><b>Фамилия Имя Отчество</b></string>
    <string name="exit_item_Str">Выйти</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facultet_Str"><u>Пример факультета в студию ребят</u></string>
    <string name="forma_vozm_str"><u>Бюджет или доцент</u></string>
    <string name="group_or_academic_str"><u>ИВБ-111 или кандидат наук</u></string>
    <string name="date_expire"><u>01.01.1980</u></string>
    <string name="inputLastname">Введите фамилию пользователя</string>
    <string name="tasks">Задачи</string>
</resources>