<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_chats">

    <fragment
        android:id="@+id/nav_chats"
        android:name="ru.linedown.nefeslechat.ui.chats.ChatsFragment"
        android:label="@string/menu_chats"
        tools:layout="@layout/fragment_self" />

    <fragment
        android:id="@+id/nav_self"
        android:name="ru.linedown.nefeslechat.ui.self.SelfFragment"
        android:label="@string/menu_self"
        tools:layout="@layout/fragment_self" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="ru.linedown.nefeslechat.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_create_chat"
        android:name="ru.linedown.nefeslechat.ui.createchat.CreateChatFragment"
        android:label="@string/menu_create_chat"
        tools:layout="@layout/fragment_create_chat" />
    <fragment
        android:id="@+id/nav_search"
        android:name="ru.linedown.nefeslechat.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/nav_about"
        android:name="ru.linedown.nefeslechat.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>