<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/user_settings_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/user_settings_const_str"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fio_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fio_template"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/status_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_template"
            android:textAlignment="center"
            android:textSize="16sp" />

        <View
            android:id="@+id/under_status_label_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/account_const_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_label"
            android:textColor="@color/green"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/role_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10sp"
            android:text="@string/template_role"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/role_const_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/const_role_text"
            android:textSize="14sp" />

        <View
            android:id="@+id/under_phone_const_label_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="50dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/mail_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10sp"
            android:text="@string/mail_template"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/mail_const_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/mail_label"
            android:textSize="14sp" />

        <View
            android:id="@+id/underMailDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="50dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/group_or_academic_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="10sp"
            android:text="Шаблон группы или должности"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/group_or_academic_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:text="Группа или ученое звание" />

        <View
            android:id="@+id/under_group_or_academic_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="50dp"
            android:background="?android:attr/listDivider"
            android:visibility="gone" />

        <TextView
            android:id="@+id/academic_degree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="10sp"
            android:text="Шаблон ученой должности"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/academic_degree_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:text="Учёное звание"
            android:visibility="gone" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/notifLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileLayout">

        <View
            android:id="@+id/under_account_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/notifications_const_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/show_notifications_label"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/switch_notife"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/the"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_theme_label_divider">

        <TextView
            android:id="@+id/dark_theme_const_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/dark_theme_label"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/theme_const_str" />

        <TextView
            android:id="@+id/theme_const_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_const_str"
            android:textColor="@color/green"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/switch_theme"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/under_dark_theme_label_divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginEnd="4dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_theme" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/about_str"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/nefeslechat_android_v1"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/top_theme_label_divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifLayout" />

    <View
        android:id="@+id/under_user_settings_label_divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_settings_label" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/green"
        android:text="@string/exit_button_text_const"
        app:layout_constraintBottom_toTopOf="@+id/about_str"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/the"
        app:layout_constraintVertical_bias="0.239" />

</androidx.constraintlayout.widget.ConstraintLayout>